# AirSLAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  package.xml  ros_main.cpp  run_batch.py  test.cpp  test_line_optimization.cpp
cmake/: FindG2O.cmake
configs/: configs.yaml  configs_euroc.yaml  configs_oivio.yaml  configs_oivio1.yaml  configs_oivio2.yaml  configs_oivio3.yaml  configs_realsense.yaml  configs_uma.yaml  configs_uma_bumblebee.yaml  configs_uma_bumblebee_indoor.yaml  configs_uma_bumblebee_indoor1.yaml  configs_uma_bumblebee_indoor2.yaml  configs_uma_bumblebee_indoor3.yaml  configs_uma_bumblebee_outdoor.yaml  configs_uma_ids_indoor.yaml  configs_uma_ids_outdoor.yaml  euroc.rviz  euroc.yaml  oivio.yaml  realsense_848_480.yaml  uma.yaml  uma_bumblebee.yaml  uma_ids.yaml
configs/camera/: dark_euroc.yaml  oivio.yaml  realsense_848_480.yaml  tartanair.yaml  uma_bumblebee.yaml
configs/map_refinement/: mr_euroc.yaml  mr_oivio.yaml  mr_tartanair.yaml
configs/relocalization/: reloc_euroc.yaml  reloc_tartanair.yaml
configs/visual_odometry/: vo_euroc.yaml  vo_euroc_dark.yaml  vo_oivio.yaml  vo_tartanair.yaml  vo_uma_bumblebee.yaml
convert2onnx/: convert_int32.py  convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  simplify_superglue.sh  simplify_superpoint.sh  superglue.py  superpoint.py
demo/: map_refinement.cpp  relocalization.cpp  test_feature.cpp  visual_odometry.cpp
docker/: build.sh  launch.sh  requirements.txt  ubuntu-20.04.Dockerfile
include/: camera.h  dataset.h  debug.h  feature_detector.h  frame.h  imu.h  light_glue.h  line_processor.h  map.h  map_builder.h  map_refiner.h  map_user.h  mapline.h  mappoint.h  plnet.h  point_matcher.h  point_matching.h  read_configs.h  ros_publisher.h  super_glue.h  super_point.h  thread_publisher.h  timer.h  utils.h
include/bow/: FSuperpoint.h  database.h
include/g2o_optimization/: edge_imu.h  edge_project_line.h  edge_project_point.h  edge_project_stereo_line.h  edge_relative_pose.h  g2o_optimization.h  types.h  vertex_imu.h  vertex_line3d.h  vertex_vi_pose.h
include/optimization_3d/: optimization_3d.h  types.h  visual_error_term.h
launch/: euroc.launch  euroc_ros.launch  oivio.launch  realsense.launch  uma.launch  uma_bumblebee.launch  uma_bumblebee_indoor.launch  uma_bumblebee_outdoor.launch  uma_ids_indoor.launch  uma_ids_outdoor.launch
launch/map_refinement/: mr_euroc.launch  mr_oivio.launch  mr_tartanair.launch
launch/relocalization/: reloc_euroc.launch  reloc_tartanair.launch
launch/visual_odometry/: vo_euroc.launch  vo_euroc_dark.launch  vo_oivio.launch  vo_tartanair.launch  vo_uma_bumblebee.launch
output/: plnet_s1.onnx
rviz/: map_optimization.rviz  relocalization.rviz  vo.rviz
scripts/: evaluation.py  run_batch_map_refinement.py  run_batch_relocalization.py  run_batch_visual_odometry.py
src/: camera.cc  dataset.cc  debug.cc  feature_detector.cc  frame.cc  imu.cc  light_glue.cpp  line_processor.cc  map.cc  map_builder.cc  map_refiner.cc  map_user.cc  mapline.cc  mappoint.cc  plnet.cpp  point_matcher.cc  point_matching.cc  ros_publisher.cc  super_glue.cpp  super_point.cpp  thread_publisher.cc  timer.cc  utils.cc
src/bow/: FSuperpoint.cc  database.cc
src/g2o_optimization/: edge_imu.cc  edge_project_line.cc  edge_project_point.cc  edge_project_stereo_line.cc  edge_relative_pose.cc  g2o_optimization.cc  vertex_imu.cc  vertex_line3d.cc  vertex_vi_pose.cc
src/optimization_3d/: optimization_3d.cc
